--- a/OneplusShit/res/values/shit_strings.xml
+++ b/OneplusShit/res/values/shit_strings.xml
@@ -93,7 +93,7 @@
     <string name="app_name">OnePlus Special Features</string>
 
     <!-- New Options -->
-    <string name="device_extras">OnePlus Shit</string>
+    <string name="device_extras">OnePlus Love</string>
     <string name="graphics_title">Graphics</string>
     <string name="category_vibrator">Vibrator</string>
     <string name="vib_strength_title_head">System Strength</string>
@@ -113,7 +113,7 @@
     <string name="device_doze_summary">Ambient Display Options</string>
     <string name="taptowake_title">D2TW</string>
     <string name="taptowake_summary">Double Tap To Wake</string>
-    <string name="slider_op_title">Shitty Slider</string>
+    <string name="slider_op_title">Alert Slider</string>
     <string name="tile_hbm_mode">High Brigthness</string>
     <string name="slider_op_summary">Notification Slider Settings</string>
 
